tests/ternary/valid/ternary_short_circuit_2.amu
main :: () -> s32 {
    a:s32 = 0;
    b:s32 = (if(a) (a = 3) else (a = 1)) + 1;
    return a+b;
}