tests/ternary/invalid/ternary_assign.amu
main :: () -> s32 {
    a:s32 = 2;
    b:s32 = 1;
    if(a > b) a = 1 else a = 0;
    return a;
}